[package]
name = "fstrm"
version = "0.2.0"
authors = ["Shell Chen <me@sorz.org>"]
edition = "2021"

[dependencies]
byteorder = "1.3"
thiserror = "1.0"
anyhow = "1.0"
log = { version = "0.4.20", features = ["release_max_level_debug"] }
env_logger = { version = "0.10.0", optional = true }
clap = { version = "~4.4.0", optional = true, features = ["derive"] }

[features]
logger=["env_logger"]
command-line=["clap"]

[[bin]]
name = "fstrm_capture"
path = "src/bin/capture.rs"
required-features = ["command-line"]

[[bin]]
name = "fstrm_dump"
path = "src/bin/dump.rs"
required-features = ["command-line"]
